--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,20 @@ body {
 
 /*-------------------------------------------------------------------------------------------------*/
 
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
+    background-color:  #20CC9033 !important; 
+    color: #333 !important; 
+  }
+  .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected, .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected.ng-option-marked {
+    color: #333 !important;
+    background-color:  #20CC9033 !important; 
+}
+
+
+
+
+
+
 @media (min-width: 992px) {
     /* .collapse-btn {
         left: 285px;
